Replace \DisplayProblem with built-in if

--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../example.tex
-\nextproblem{hide}
+% \nextproblem{hide}
 \begin{intro}
-	In this exercise, we'll be looking at \( \dots \)
+	2(i) In this exercise, we'll be looking at \( \dots \)
 \end{intro}
 \nextproblem{tag=Y, points=1}
 \begin{problem}
