--- a/src/ifs.tex
+++ b/src/ifs.tex
@@ -12,3 +12,4 @@
 \global\newif\ifexb@opt@tightenparagraphs
 \global\newif\ifexb@DisplaySolutions
 \global\newif\ifexb@DisplayCurrentSolution
+\global\newif\ifexb@DisplayCurrentProblem
