--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.3-prerelease (2018/11/11) - build 108
+%% The LaTeX package exercisebank - version v0.2.3-experimental (2018/11/12) - build 109
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,10 +13,10 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/11/11 v0.2.3-prerelease Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/11/12 v0.2.3-experimental Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.3-prerelease - Build 108}
-\PackageWarningNoLine{exercisebank-v0.2.3-prerelease}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
+\def\exercisebankversion{v0.2.3-experimental - Build 109}
+\PackageWarningNoLine{exercisebank-v0.2.3-experimental}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
 \gdef\setExercisesDir#1{\@latex@error{\string\setExercisesDir is deprecated. Use \string\exercisebanksetup{exercise directory=#1} instead}{}\stop\bye
@@ -29,8 +29,12 @@
 \newif\ifexb@opthides
 \global\newif\ifexb@b@nextprob@header
 \global\exb@b@nextprob@headerfalse
-\global\newif\ifexb@b@DisplaySolutions
 \global\newif\ifexb@solutionsonly
+\global\newif\ifexb@isFirstProblem
+\global\newif\ifexb@opt@tightenparagraphs
+\global\newif\ifexb@DisplaySolutions
+\global\newif\ifexb@DisplayCurrentSolution
+\global\newif\ifexb@DisplayCurrentProblem
 \usepackage{xstring}
 \usepackage{pgffor}
 \usepackage{scrextend}
@@ -67,7 +71,7 @@
 			\fi%
 }%
 	\fi}
-\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.3-prerelease}}
+\gdef\exb@warn{\PackageWarningNoLine{exercisebank-v0.2.3-experimental}}
 \gdef\exb@err#1{\PackageError{exercisebank}{#1}{}}
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
@@ -158,16 +162,15 @@
 \gdef\ShowTags{\gdef\exb@showtags{\isTrue}}
 \gdef\exb@printCurrentTags{Tags: \exb@currentTags~}
 \gdef\ShowFilenames{\At\InputExerciseFile{\exerciseFile\par}}
-\gdef\@DisplaySolutions{\@isFalse}
-\gdef\DisplaySolutions{\global\exb@b@DisplaySolutionstrue\xdef\@DisplaySolutions{\isTrue}\@latex@warning{Showing solutions}}
-\gdef\ifDisplaySolutions{\if\@DisplaySolutions\@isTrue}
+\global\exb@DisplaySolutionsfalse
+\gdef\DisplaySolutions{\global\exb@DisplaySolutionstrue\@latex@warning{Showing solutions}}
 \gdef\SolutionsOnly{\DisplaySolutions\global\exb@solutionsonlytrue}
 \gdef\exb@currentPoints{0}
 \newif\ifexbank@if@needspace
 \global\exbank@if@needspacetrue
 \pgfkeys{/exbanksetup/.is family, /exbanksetup,
 default/.style = {  part problems = On,
-  tighten paragraphs = True,
+  tighten paragraphs = true,
   problem header={\normalsize\Large\bfseries\@tr{Problem}~\theproblemcounter},
   part problem header={\large\textbf{(\theproblemcounter\alph{partproblemcounter})}},
   part problem header suffix={},
@@ -189,7 +192,7 @@ solution header/.store in = \exbank@opt@solutionHeader,
 problem needs space/.store in = \exbank@opt@problemneedspace,
 part problem header suffix/.store in=\exb@partproblem@header@suffix,
 part problems/.style = {switches/#1/.get = \exbank@opt@partProblems},
-tighten paragraphs/.style = {switches/#1/.get = \exbank@opt@tightenparagraphs},
+tighten paragraphs/.is if = {exb@opt@tightenparagraphs},
 style margins/.style={switches/#1/.get = \exbank@opt@doMargins},
 switches/.cd,
   On/.initial = \@isTrue,
@@ -206,19 +209,19 @@ switches/.cd,
 \exercisebanksetup{default}
 \AtBeginDocument{\xdef\tpd{\the\prevdepth}}
 \gdef\tighten@paragraph{%
-\if\exbank@opt@tightenparagraphs\@isTrue\relax%
-      \filbreak%
+\ifexb@opt@tightenparagraphs\relax%
+  \filbreak%
 \fi%
 }
 \gdef\tighten@paragraph@solutions{%
-\if\exbank@opt@tightenparagraphs\@isTrue\relax%
-    \if\@DisplaySolutions\@isTrue
-      \filbreak%
-    \fi
+\ifexb@opt@tightenparagraphs%
+  \ifexb@DisplaySolutions%
+    \filbreak%
+  \fi
 \fi%
 }
 \gdef\tighten@paragraph@always{%
-\if\exbank@opt@tightenparagraphs\@isTrue\relax%
+\ifexb@opt@tightenparagraphs%
 \filbreak%
 \fi%
 }
@@ -355,7 +358,7 @@ switches/.cd,
 \setcounter{problemcounter}{0}
 \newcounter{partproblemcounter}
 \At\VeryBeginProblem{%
-	\if\exbank@opt@tightenparagraphs\@isTrue\relax%
+	\ifexb@opt@tightenparagraphs%
 	\ifexbank@if@needspace\needspace{\exbank@opt@problemneedspace}\fi%
 	\vskip-2\baselineskip\relax%
 	\fi%
@@ -411,12 +414,12 @@ tags/.estore in=\exb@currentTags,%
 tag/.code={\pgfkeysalso{tags={#1}}},
 head/.code={\global\exb@b@nextprob@headertrue\gdef\exb@nextprob@header{#1}},%
 reset pp head/.code={\global\exb@b@nextprob@headerfalse},
-solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems/hide=true}\fi}
+solution only/.code={\ifexb@DisplaySolutions\else\pgfkeysalso{/exbank/problems/hide=true}\fi}
 }
 \def\nextproblem{\pgfqkeys{/exbank/problems}}
 \At\EndProblem{%
-	\if\exbank@opt@tightenparagraphs\@isTrue\relax%
-		\if\@DisplaySolutions\@isTrue%
+	\ifexb@opt@tightenparagraphs\relax%
+		\ifexb@DisplaySolutions%
 			\penalty-300%
 		\fi%
 	\fi%
@@ -427,9 +430,9 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 }
 \gdef\isFalse{0}
 \gdef\isTrue{1}
-\gdef\DisplayProblem{\isTrue}
+\global\exb@DisplayCurrentProblemtrue
 \gdef\@displayMetaCounter{\isFalse}
-\AtBeginDocument{	\if\@DisplaySolutions\isFalse
+\AtBeginDocument{	\ifexb@DisplaySolutions\isFalse
 		\@latex@warning{Hiding solutions. Show them with \string\DisplaySolutions}
 	\fi
 }
@@ -439,7 +442,7 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 \global\exb@hidenextsolfalse
 \gdef\exb@ifshowproblem#1#2{%
 	\exb@isdisplayingfalse%
-	\ifnum\pdfstrcmp{\DisplayProblem}{\@isTrue}=\z@%
+	\ifexb@DisplayCurrentProblem%
 		\ifexb@opthides\else\exb@isdisplayingtrue\fi\fi%
 	\ifexb@isdisplaying#1\else#2\fi%
 }
@@ -447,7 +450,7 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 	\exb@ifshowproblem{\let\ProcessCutFile\do@ProcessCutFile#1\global\exb@hidenextsolfalse}{\def\ProcessCutFile{}\global\exb@hidenextsoltrue}%
 }
 \generalcomment{problem}{%
-	\edef\DisplaySolution{\@DisplaySolutions}%
+	\let\ifexb@DisplayCurrentSolution\ifexb@DisplaySolutions
 	\stepcounter{metacounter}%
 	\@dinfo{problem: Triggering \string\DecideProblemDisplay}%
 	\Trigger\DecideProblemDisplay%
@@ -463,9 +466,9 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 			\Trigger\VeryBeginProblem%
 		\fi%
 }%
-  \ifexb@solutionsonly\def\ProcessCutFile{}\if\DisplayProblem\@isTrue\relax\stepcounter{partproblemcounter}\fi\fi
+  \ifexb@solutionsonly\def\ProcessCutFile{}\ifexb@DisplayCurrentProblem\relax\stepcounter{partproblemcounter}\fi\fi
 }{\@dinfo{Ending problem env}%
-	\if\DisplayProblem\@isTrue\relax%
+	\ifexb@DisplayCurrentProblem\relax%
 		\if\exbank@opt@partProblems\@isTrue\relax%
 			\Trigger\EndPartproblem%
 			\tighten@paragraph\fi%
@@ -478,12 +481,12 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 \generalcomment{solution}{\@dinfo{START solution ENV}%
 	\Trigger\AtBeginSolutionHard
 	\begingroup
-	\if\@DisplaySolutions\isTrue
-		\if\DisplayProblem\isFalse%
-			\xdef\DisplaySolution{\isFalse}
+	\ifexb@DisplaySolutions%
+		\ifexb@DisplayCurrentProblem\isFalse%
+			\global\exb@DisplayCurrentSolutionfalse
 		\fi
 	\fi
-	\if\DisplaySolution\isTrue%
+	\ifexb@DisplayCurrentSolution%
     \let\ProcessCutFile\do@ProcessCutFile%
     \ifexb@solutionsonly\AtNextPar{\leavevmode\smash{\llap{\exbank@opt@partProblemHeader}}\Trigger\AfterPPHeader}\fi%
 		\ifexb@hidenextsol\else\Trigger\BeginSolution\fi%
@@ -491,7 +494,7 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 		\def\ProcessCutFile{}%
 	\fi
 }{%
-	\if\DisplaySolution\isTrue
+	\ifexb@DisplayCurrentSolution%
 		\Trigger\EndSolution
 		\tighten@paragraph@solutions
 		\vspace*{0.5em}
@@ -601,16 +604,18 @@ solution only/.code={\ifexb@b@DisplaySolutions\else\pgfkeysalso{/exbank/problems
 \let\ipm\@ifppMode
 \let\T@\isTrue
 \let\F@\isFalse
+\def\exb@DPT{\global\exb@DisplayCurrentProblemtrue}
+\def\exb@DPF{\global\exb@DisplayCurrentProblemfalse}
 \At\DecideProblemDisplay{%
     \ifnum\pdfstrcmp{\ppList}{\emptyList}=\z@\relax%
-      \xdef\DisplayProblem{\ipm\exclude\T@\ipm\select\F@}
+      \ipm\exclude\exb@DPT\ipm\select\exb@DPF
     \fi
-    \exb@int@isin{\themetacounter}{\ppList}{      \xdef\DisplayProblem{\ipm\exclude\F@\ipm\select\T@\ipm\normal\T@}
-}{      \xdef\DisplayProblem{\ipm\exclude\T@\ipm\select\F@\ipm\normal\T@}
+    \exb@int@isin{\themetacounter}{\ppList}{      \ipm\exclude\exb@DPF\ipm\select\exb@DPT\ipm\normal\exb@DPT
+}{      \ipm\exclude\exb@DPT\ipm\select\exb@DPF\ipm\normal\exb@DPT
 }
 \ifexb@tagbuildmode
-\ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax%
-\exb@intersection@any{\exb@currentTags}{\exb@tagList}{\global\exb@opthidesfalse}{\global\exb@opthidestrue\xdef\DisplayProblem{0}}%
+\ifexb@DisplayCurrentProblem\relax%
+\exb@intersection@any{\exb@currentTags}{\exb@tagList}{\global\exb@opthidesfalse}{\global\exb@opthidestrue\exb@DisplayCurrentProblemfalse}%
 \fi
 \fi
 }
@@ -704,10 +709,10 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
 \readlist*\thelist\csv@list%
 \foreachitem\items\in\thelist{[{\item}]{#1},}%
 }
-\let\exbank@isFirstProblem\isTrue
+\exb@isFirstProblemtrue
 \exb@def@makeset@cmd{\phead}{%
-  \if\exbank@isFirstProblem\isTrue%
-    \let\exbank@isFirstProblem\isFalse%
+  \ifexb@isFirstProblem%
+    \global\exb@isFirstProblemfalse%
   \else%
     \Trigger\EndProblem%
   \fi%
@@ -715,8 +720,8 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
   \Trigger\BeginProblem%
   \Trigger\VeryBeginProblem%
 }
-\exb@def@makeset@cmd{\pheadarg}[1]{  \if\exbank@isFirstProblem\isTrue%
-    \let\exbank@isFirstProblem\isFalse%
+\exb@def@makeset@cmd{\pheadarg}[1]{  \ifexb@isFirstProblem%
+    \global\exb@isFirstProblemfalse%
   \else%
     \Trigger\EndProblem%
   \fi%
@@ -867,7 +872,7 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
 \At\BeginPartproblem{\addtocounter{exb@points}\exb@currentPoints}
 \At\EndPartproblem{\gdef\exb@currentPoints{0}}
 \def\exb@hidetaglist{}
-\At\DecideProblemDisplay{\ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax%
+\At\DecideProblemDisplay{\ifexb@DisplayCurrentProblem\relax%
 \ifx\exb@hidetaglist\relax\else
 \exb@intersection@any{\exb@currentTags}{\exb@hidetaglist}{\global\exb@opthidestrue}{}%
 \fi
