--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -58,7 +58,6 @@
 }
 
 \gdef\introarg{\@isFalse}
-\gdef\noheadarg{\@isFalse}
 %% Makeset arg handler
 \pgfkeys{
  /makeset/.is family, /makeset,
@@ -68,7 +67,7 @@
  nohead/.style = {noheadarg=\@isTrue},
  head/.style = {noheadarg=\@isFalse},
  introarg/.estore in = \introarg,
- noheadarg/.estore in = \noheadarg
+ noheadarg/.is if = {exb@noheadArg},
 }
 %:=\makesetdefaults{nohead|intro}
 %: Sets the default arguments to all makeset-keys.
@@ -90,7 +89,7 @@
 \pgfkeys{/makeset/override/.cd,
 intro/.code = {\gdef\introarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSetID @intro\endcsname{\@isTrue}},
 nointro/.code = {\gdef\introarg{\@isFalse}\ea\gdef\csname setlist@\exb@currentSetID @intro\endcsname{\@isFalse}},
-nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSetID @nohead\endcsname{\@isTrue}}
+nohead/.code = {\exb@noheadArgtrue\ea\gdef\csname setlist@\exb@currentSetID @nohead\endcsname{\@isTrue}}
 }
 % When a \makeset is made, it adds the set name to the
 % \@listOfSets for use in \sprite
@@ -122,7 +121,7 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
     \gdef\introarg{\isTrue}
     \ea\gdef\csname setlist@#2@intro\endcsname{\isTrue}
   \fi
-  \if\noheadarg\isTrue%
+  \ifexb@noheadArg%
     \ea\gdef\csname setlist@#2@nohead\endcsname{\isTrue}
   \fi
   \ea\gdef\csname setlist@#2\endcsname{\exlist@protect{#3}}
@@ -181,7 +180,7 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
   \buildset{#1}
 }
 %%Logic for building a set
-\gdef\@countIntros{\isFalse}
+\exb@CountIntrosfalse
 \gdef\exb@setpgf#1{%
 \edef\keystring{{/makeset,default,#1}}%
 \ea\pgfkeys\keystring}
@@ -197,7 +196,7 @@ nohead/.code = {\gdef\noheadarg{\@isTrue}\ea\gdef\csname setlist@\exb@currentSet
   \pgfkeys{/makeset/override/.cd, #1}
   \global\let\setName\exb@currentSetID%
   \gdef\exb@buildset@oarg{#1}
-  \@ifundefined{setlist@#2@intro}{\gdef\@countIntros{\isFalse}}{\gdef\@countIntros{\isTrue}}%
+  \@ifundefined{setlist@#2@intro}{\exb@CountIntrosfalse}{\exb@CountIntrostrue}%
   \@ifundefined{setlist@#2@nohead}{\gdef\nohead{\isFalse}}{\gdef\nohead{\isTrue}}%
   %% Setting the global setName
 %:=\setName
