Correct 'warning'-message if \DisplaySolutions is or is not shown. Fix #91

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -70,6 +70,9 @@
     \change{Fixed bug where part problem header repeats if solution is itemize.}
     \change{Introduced the \dac\rigid command for the \dac\At functionality. Also the \dac\ClearHook for deleting a hook}
     \change{\dac\buildset now gives error if set does not exist.}
+    \change{Made \dac\HideTags cummulative.}
+    \change{Created \dac\ShowAllTags for clearing tags list}
+    \change{Raises error when pdf\TeX(or pdf\LaTeX) is not used}
 \chlogtable
 
 
