--- a/src/main.tex
+++ b/src/main.tex
@@ -4,15 +4,19 @@
 \usepackage{lipsum}
 
 \exercisebanksetup{%
-  exercise directory=../exercises
+	exercise directory=../exercises
 }
 
 %% The \makeset{setname}{exercises,to,include} picks exercises from the exercises-folder
 %% The \exclude{setname}{1,2,3,...,9} excludes partproblems 1,...,9 from setname
 \makeset{electro}{capacitance}
 \makeset{first}{firstexercise}
-\makeset{2}{firstexercise, \exclude{secondexercise}{1,2}, \select{thirdexercise}{1,2}, \exclude{thirdexercise}{1,2}}
-% \DisplaySolutions
+% \DeclareExerciseCommand\extitle[1]{\strut{\vadjust{\vbox to 0pt{\hskip\pMarginLeft{\Large\bfseries #1}}}}%}
+\DeclareExerciseCommand\problemtitle[1]{\stepcounter{problemcounter}%
+	\strut{\vadjust{\vbox to 0pt{\hskip\pMarginLeft{\Large{\bfseries Exercice \theproblemcounter.} #1}}}}%
+}
+\DisplaySolutions
+\makeset[nohead]{2}{firstexercise, \exclude{secondexercise}{1,2}, \select{thirdexercise}{1,2}, \exclude{thirdexercise}{1,2}}
 \begin{document}
-  \buildset{2}
+	\buildset{2}
 \end{document}
