--- a/src/packageoptions.tex
+++ b/src/packageoptions.tex
@@ -1,5 +1,6 @@
 %!TEX root = main.tex
 \makeatletter
+% \ignoreOutlineSpaces
 \edef\@isTrue{1}
 \edef\@isFalse{0}
 %:§config
@@ -34,6 +35,7 @@
 \gdef\exb@currentPoints{0}
 %:§config
 %:-
+% \obeyOutlineSpaces
 % ---- \exercisebanksetup ----- %
 \pgfkeys{
 /exbanksetup/.is family, /exbanksetup,
@@ -79,6 +81,7 @@ switches/.cd,
   F/.initial = \@isFalse,
   False/.initial = \@isFalse,
 }
+% \ignoreOutlineSpaces
 %:=\exercisebanksetup{[key/values]}
 \newcommand\exercisebanksetup[1]{
   \pgfkeys{/exbanksetup, #1}%
@@ -102,6 +105,7 @@ switches/.cd,
 \filbreak%
 \fi%
 }
+% \obeyOutlineSpaces
 
 
 %: Here is a list of the different keys and their meaning
