--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -10,6 +10,9 @@
 \@ifundefined{ownLineNoSpacesGotIt}{
 \@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
+\ifcsname pdfstrcmp\endcsname\else
+\PackageError{exercisebank-@@VERSION}{Exercisebank currently only works with pdfLaTeX}{}\stop
+\fi
 %:\!begin{marker}DEPRECATED! use \refCom{exercisebanksetup} with \refKey{exercise directory} instead!\!end{marker}
 %:=\setExercisesDir{directory}
 %:\!begin{marker}\setExercisesDir is deprecated! use \refCom{exercisebanksetup} with \refKey{exercise directory} instead!\!end{marker}
@@ -26,10 +29,14 @@
 \makeatother
 
 \global\let\incl = \input
+\input{spaceIgnore}
 \input{ifs}
 \input{packages}
+% \ignoreOutlineSpaces
 \input{helpers}
+% \obeyOutlineSpaces%
 \input{packageoptions}
+% \ignoreOutlineSpaces
 \input{stopfilbreak}
 \input{i18n}
 \input{at}
