--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -72,7 +72,7 @@
     \change{\dac\buildset now gives error if set does not exist.}
     \change{Made \dac\HideTags cummulative.}
     \change{Created \dac\ShowAllTags for clearing tags list}
-    \change{Raises error when pdf\TeX(or pdf\LaTeX) is not used}
+    \change{Raises error when pdfTeX(or pdfLaTeX) is not used}
 \chlogtable
 
 
