--- a/exercises/firstexercise.tex
+++ b/exercises/firstexercise.tex
@@ -1,7 +1,7 @@
 %!TEX root = ../example.tex
-% \nextproblem{head=hello,solution only}
+\nextproblem{head=hello,solution only}
 \begin{problem}
-PROBLEM 1
+  PROBLEM 1
 \end{problem}
 %% REMEMBER that \end{solution} can't have spaces in front of it and needs it's own line
 \begin{solution}
