--- a/src/main.tex
+++ b/src/main.tex
@@ -16,7 +16,8 @@
 	\strut{\vadjust{\vbox to 0pt{\hskip\pMarginLeft{\Large{\bfseries Exercice \theproblemcounter.} #1}}}}%
 }
 \DisplaySolutions
-\makeset[nohead]{2}{firstexercise, \exclude{secondexercise}{1,2}, \select{thirdexercise}{1,2}, \exclude{thirdexercise}{1,2}}
+% \makeset[nohead]{2}{firstexercise, \exclude{secondexercise}{1,2}, \select{thirdexercise}{1,2}, \exclude{thirdexercise}{1,2}}
+\makeset{2}{firstexercise}
 \begin{document}
 	\buildset{2}
 \end{document}
